# unstructured-mcp-server

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml  smithery.yaml
src/: __init__.py
src/unstructured_mcp/: __init__.py  server.py
