[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unstructured-mcp-server"
version = "0.1.0"
description = "FastMCP server for Unstructured.io document parsing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tapiocapioca"}
]
keywords = ["mcp", "unstructured", "document-parsing", "pdf", "docx"]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "smithery>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Tapiocapioca/unstructured-mcp-server"
Repository = "https://github.com/Tapiocapioca/unstructured-mcp-server"
Issues = "https://github.com/Tapiocapioca/unstructured-mcp-server/issues"

[project.scripts]
unstructured-mcp = "unstructured_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

# Smithery configuration
[tool.smithery]
server = "unstructured_mcp.server:create_server"
